# AustralianSchoolMaths

./: .gitignore  ReadMe.md  config.toml  hugo.toml  pyproject.toml  temp.py  topic_summary_structure.csv
WebsiteCreator/: 00_Graphs_Combined.ipynb  Calculus.md  Formulas.ipynb  Formulas.md  MarkdownGenerator.ipynb  Untitled1.ipynb  caller.ipynb  content.py  custom_nb_convert_preprocessor.py  data_management.py  data_sources.py  data_validator.py  definition_display.py  definitions.csv  definitions.py  file_management.py  formatters.py  formula_page_generator.py  formula_sheet_tabs_example.md  formula_tables.py  formulas.csv  formulas.csv.backup  formulas.py  graph_generator.py  graphs.py  main.ipynb  main.py  main_outdated.py  maths_objects.py  matplot_experiment.ipynb  note_display.py  page_structure.py  site_content.py  site_hierarchies.py  site_hierarchy.csv  sort_orders.csv  spreadsheet_link_display.py  storage.py  syllabus.py  syllabus_topics.csv  (+4 more)
assets/: _custom.scss  _defaults.scss
public/: 404.html  en.search-data.min.5e40ff1da23e430cbd18c81545ee5334c1e22c183e020037675f5afbd67ecd8a.json  en.search-data.min.615dafb009dbcde4ecc422d93d3e9a97e61516b94daf16364fa6d5628683f3ad.json  en.search-data.min.679f682745601003551d5a416c5d6ce23e35b57be7c48e281f464f47ac3d1b62.json  en.search-data.min.9aec33f375d998643d6742f4cb304271b061dbdec4ba36dd39da2e7206933763.json  en.search-data.min.f0d3756d5187bd1dbbd592b7bc22625b02e5dece95f214cd2d3bb7c6761bb602.json  en.search.min.03119d126f8ba4e385b47ad665d926e7839e208e41fdef58a86183e7311d38a6.js  index.html  index.xml  manifest.json  (+5 more)
(+764 files in other folders)
