[project]
name = "australianschoolmaths"
version = "0.1.0"
description = ""
authors = [
    {name = "Charl Potgieter",email = "charl.j.potgieter@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "sympy (>=1.14.0,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.16"

[tool.ruff]
line-length = 79
